--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WonderLust</title>
+    <title>StayEase</title>
     <link rel="stylesheet" href="/css/style.css" />
 
     <link
