--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -24,7 +24,7 @@
       <div class="col-md-4 mb-4">
         <h5 class="fw-semibold">Contact Us</h5>
         <p class="mb-1"><i class="bi bi-geo-alt"></i> Dhaka, Bangladesh</p>
-        <p class="mb-1"><i class="bi bi-envelope"></i> support@stayease.com</p>
+        <p class="mb-1"><i class="bi bi-envelope"></i> zubair01325@gmail.com</p>
         <p class="mb-3"><i class="bi bi-telephone"></i> +880 1706-894587</p>
 
         <!-- Social Icons -->
